--- a/pages/product.html
+++ b/pages/product.html
@@ -33,7 +33,7 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item active">
-              <a class="nav-link" href="../homepage.html">Home <span class="sr-only"></span></a>
+              <a class="nav-link" href="../index.html">Home <span class="sr-only"></span></a>
             </li>
 
             <li class="nav-item deactive">
