--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 
 <body>
     <div class="container">
-    <!-- Header start-->
-        <div class="row">
-            <div class="col"> 
+        
                         <!-- Navigation start -->
                         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
                             <a class="navbar-brand" href="index.html">Happy pill</a>
@@ -67,10 +65,9 @@
                             </ul>
                             </div>  
                         </nav>           
-             </div>
-        </div>
+         
                 <!-- Navigation stop -->
-
+    <!-- Header start -->
         <div class="row">
             <div class="col-12">
                 <!-- Carousel start-->    
@@ -229,7 +226,7 @@
                         </div>
                         <div class="col-md-4 mb-md-0 mb-3">
                             <!-- Links -->
-                            <h5 class="text-uppercase">Quick links</h5>
+                            <h5 class="text-uppercase">Social Media</h5>
                                     <!-- Facebook -->
                                         <a class="fb-ic">
                                             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
