--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,7 +10,7 @@
     <!-- bootstrap 4 css -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    <!--link rel="stylesheet" href="http://getbootstrap.com.vn/examples/equal-height-columns/equal-height-columns.css"-->
     <!-- custom css -->
-        <link href="Css/product.css " rel="stylesheet " type="text/css ">
+        <link href="Css/style.css " rel="stylesheet " type="text/css ">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <!-- jquerry -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -81,7 +81,7 @@
    
         <div class="row">
             <div class="col">
-                <h1>Blog - Meet us - Gallery</h1>
+                <h1>Blog</h1>
             </div>
             <div class="col-3">
                     <form class="input-group">
@@ -161,11 +161,11 @@
                     <!-- Grid column empty space  -->
                     <div class="col-md-3">
                             <h5 class="text-uppercase">Support us</h5>
-                            <a href="pages/donate.html" class="btn btn-dark " role="button">Donate</a>
+                            <a href="./donate.html" class="btn btn-dark " role="button">Donate</a>
                     </div>
                     <div class="col-md-4 mb-md-0 mb-3">
                         <!-- Links -->
-                        <h5 class="text-uppercase">Quick links</h5>
+                        <h5 class="text-uppercase">Social Media</h5>
                                 <!-- Facebook -->
                                     <a class="fb-ic">
                                         <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
