--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -24,8 +24,7 @@
 
 <body>
     <div class="container">
-            <div class="row">
-                    <div class="col"> 
+            
                                 <!-- Navigation start -->
                                 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
                                     <a class="navbar-brand" href="../index.html">Happy pill</a>
@@ -66,8 +65,7 @@
                                     </ul>
                                     </div>  
                                 </nav>           
-                     </div>
-                </div>
+                
             <!-- Navigation stop -->
      <!-- Header start -->
         <div class="row">
@@ -139,11 +137,11 @@
                         <!-- Grid column  -->
                         <div class="col-md-3">
                             <h5 class="text-uppercase">Support us</h5>
-                            <a href="pages/donate.html" class="btn btn-dark " role="button">Donate</a>
+                            <a href="./donate.html" class="btn btn-dark " role="button">Donate</a>
                         </div>
                         <div class="col-md-4 mb-md-0 mb-3">
                             <!-- Links -->
-                            <h5 class="text-uppercase">Quick links</h5>
+                            <h5 class="text-uppercase">Social Media</h5>
                                     <!-- Facebook -->
                                         <a class="fb-ic">
                                             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
