--- a/pages/donate.html
+++ b/pages/donate.html
@@ -10,7 +10,7 @@
     <!-- bootstrap 4 css -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    <!--link rel="stylesheet" href="http://getbootstrap.com.vn/examples/equal-height-columns/equal-height-columns.css"-->
     <!-- custom css -->
-        <link href="Css/product.css " rel="stylesheet " type="text/css ">
+        <link href="Css/style.css " rel="stylesheet " type="text/css ">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <!-- jquerry -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -97,7 +97,7 @@
                         <img class="img-thumbnail"src="../images/test.jpg" alt="test">
                         <div class="card-body">
                             <h5 class="card-title">Tier 1</h5>
-                            <p class="card-text">Description</p>
+                            <p class="card-text">Kies zelf een bedrag</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
@@ -107,8 +107,8 @@
                     <div class="card" onclick="location.href = './personalinfo.html';">
                         <img class="img-thumbnail"src="../images/test.jpg" alt="test">
                         <div class="card-body">
-                            <h5 class="card-title">Tier 2</h5>
-                            <p class="card-text">Description</p>
+                            <h5 class="card-title">10€</h5>
+                            <p class="card-text">Toegang to exclusieve content</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
@@ -118,8 +118,8 @@
                     <div class="card" onclick="location.href = './personalinfo.html';">
                         <img class="img-thumbnail"src="../images/test.jpg" alt="test">
                         <div class="card-body">
-                            <h5 class="card-title">Tier 3</h5>
-                            <p class="card-text">Description</p>
+                            <h5 class="card-title">50€</h5>
+                            <p class="card-text">Gepersonaliseerd en gesigneerd kaartje</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
@@ -129,8 +129,8 @@
                     <div class="card" onclick="location.href = './personalinfo.html';">
                         <img class="img-thumbnail"src="../images/test.jpg" alt="test">
                         <div class="card-body">
-                            <h5 class="card-title">Any amount</h5>
-                            <p class="card-text">Description</p>
+                            <h5 class="card-title">100€</h5>
+                            <p class="card-text">Exclusieve filmpjes achter de schermen</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-md-4 mb-md-0 mb-3">
                         <!-- Links -->
-                        <h5 class="text-uppercase">Quick links</h5>
+                        <h5 class="text-uppercase">Social Media</h5>
                                 <!-- Facebook -->
                                     <a class="fb-ic">
                                         <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
